<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_history"
    style="@style/Margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="16dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_title_hasil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/title_result"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_gender_test"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="14sp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_title_hasil" />

        <TextView
            android:id="@+id/hasil_gender_test"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/gender_hasil"
            android:textColor="@color/black"
            android:textSize="14sp"
            card_view:layout_constraintBottom_toBottomOf="@id/tv_gender_test"
            card_view:layout_constraintStart_toEndOf="@id/tv_gender_test"
            card_view:layout_constraintTop_toTopOf="@+id/tv_gender_test" />

        <TextView
            android:id="@+id/tv_tinggi_test"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/height"
            android:textColor="@color/black"
            android:textSize="14sp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_gender_test" />

        <TextView
            android:id="@+id/hasil_tinggi_test"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/height_hasil"
            android:textColor="@color/black"
            android:textSize="14sp"
            card_view:layout_constraintBottom_toBottomOf="@id/tv_tinggi_test"
            card_view:layout_constraintStart_toStartOf="@+id/hasil_gender_test"
            card_view:layout_constraintTop_toTopOf="@+id/tv_tinggi_test" />

        <TextView
            android:id="@+id/tv_berat_test"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/weight"
            android:textColor="@color/black"
            android:textSize="14sp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_tinggi_test" />

        <TextView
            android:id="@+id/hasil_berat_test"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/weight_hasil"
            android:textColor="@color/black"
            android:textSize="14sp"
            card_view:layout_constraintBottom_toBottomOf="@id/tv_berat_test"
            card_view:layout_constraintStart_toStartOf="@+id/hasil_tinggi_test"
            card_view:layout_constraintTop_toTopOf="@+id/tv_berat_test" />

        <TextView
            android:id="@+id/tv_hasil_bmi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/bmi"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_berat_test" />

        <TextView
            android:id="@+id/hasil_bmi_test"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/bmi_hasil"
            android:textColor="@color/black"
            android:textSize="14sp"
            card_view:layout_constraintBottom_toBottomOf="@id/tv_hasil_bmi"
            card_view:layout_constraintStart_toStartOf="@+id/hasil_berat_test"
            card_view:layout_constraintTop_toTopOf="@+id/tv_hasil_bmi" />

        <ImageView
            android:id="@+id/tv_hapus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_delete"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:tint="@color/light_green" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>