<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.quisioner.Quisioner3Fragment"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvTitle_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/title_questions"
        android:textColor="@color/green"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivTinggi"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/imageBerat"
        android:src="@drawable/image_berat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle_questions" />

    <TextView
        android:id="@+id/tvQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/title_questions3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_kg"
        app:layout_constraintTop_toBottomOf="@+id/ivTinggi"
        android:textColor="@color/green"/>

    <TextView
        android:id="@+id/tvQuestions_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="start"
        android:text="@string/question3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestions"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edit_berat"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/berat_hint"
        android:textColorHint="@color/grey"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestions_gender"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/kg"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_berat"
        app:layout_constraintStart_toEndOf="@+id/edit_berat"
        app:layout_constraintTop_toTopOf="@+id/edit_berat" />

</androidx.constraintlayout.widget.ConstraintLayout>