<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quisioner.Quisioner1Fragment"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvTitle_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/title_questions"
        android:textColor="@color/green"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivTinggi"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/imageGender"
        android:src="@drawable/image_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle_questions" />

    <TextView
        android:id="@+id/tvQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/title_questions1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/rgGender"
        app:layout_constraintTop_toBottomOf="@+id/ivTinggi"
        android:textColor="@color/green"/>

    <TextView
        android:id="@+id/tvQuestions_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="start"
        android:text="@string/question1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestions"
        android:textColor="@color/black"/>

    <RadioGroup
        android:id="@+id/rgGender"
        style="@style/Margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvQuestions_gender">

        <RadioButton
            android:id="@+id/rbMen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/men"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/rbWomen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/women"
            android:textColor="@color/black"/>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>