<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:alpha="0"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036"
        app:tint="@color/green" />

    <TextView
        android:id="@+id/tv_title_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toEndOf="@+id/ivBack"
        app:layout_constraintTop_toTopOf="@+id/ivBack" />

    <ImageView
        android:id="@+id/ivRegister"
        android:layout_width="242dp"
        android:layout_height="171dp"
        android:layout_marginStart="64dp"
        android:contentDescription="@string/imageRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_register"
        app:srcCompat="@drawable/image_register" />

    <TextView
        android:id="@+id/tv_title_register2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:fontFamily="@font/poppins_semibold"
        android:labelFor="@id/edit_name"
        android:text="@string/title_register"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivRegister" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:alpha="0"
        android:fontFamily="@font/poppins_regular"
        android:labelFor="@id/edit_name"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_register2" />

    <EditText
        android:id="@+id/edit_name"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:alpha="0"
        android:background="@drawable/bg_custom"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="16"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:fontFamily="@font/poppins_regular"
        android:labelFor="@id/edit_email"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_name" />

    <com.capstone.sofitapp.ui.customview.EmailEdit
        android:id="@+id/edit_email"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:alpha="0"
        android:background="@drawable/bg_custom"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/email_hint"
        android:importantForAutofill="no"
        android:maxLength="26"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:fontFamily="@font/poppins_regular"
        android:labelFor="@id/edit_email"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email" />

    <com.capstone.sofitapp.ui.customview.PasswordEdit
        android:id="@+id/edit_password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:alpha="0"
        android:background="@drawable/bg_custom"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/password_hint"
        android:importantForAutofill="no"
        android:maxLength="26"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password" />

    <TextView
        android:id="@+id/tv_konfirmasi_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:fontFamily="@font/poppins_regular"
        android:labelFor="@id/edit_email"
        android:text="@string/password_konfirmasi"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password" />

    <EditText
        android:id="@+id/edit_konfirmasi_password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:alpha="0"
        android:background="@drawable/bg_custom"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/password_konfirmasi_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="16"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_konfirmasi_password" />

    <com.capstone.sofitapp.ui.customview.RegisterButton
        android:id="@+id/regisButton"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:alpha="0"
        android:fontFamily="@font/poppins_semibold"
        android:shadowRadius="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_konfirmasi_password" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:alpha="0"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/intent_login"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/tvLogin2"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regisButton" />

    <TextView
        android:id="@+id/tvLogin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="74dp"
        android:alpha="0"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="@+id/regisButton"
        app:layout_constraintTop_toTopOf="@+id/tvLogin" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>