<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.widget.Button
            android:id="@+id/btnKembali"
            style="@style/Margin"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_outline"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/back"
            android:textColor="@color/green"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.widget.Button
            android:id="@+id/btnLanjut"
            style="@style/Margin"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.widget.Button
            android:id="@+id/btnHasil"
            style="@style/Margin"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/title_result"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>